android/java client

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,14 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>traffic manager client sdk</name>
-	
+	<properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <volproject.version>1.0-SNAPSHOT</volproject.version>
+	    <spring.version>3.2.6.RELEASE</spring.version>
+	    <jackson.version>1.8.6</jackson.version>
+	    <cxf.version>3.0.3</cxf.version>
+  	</properties>
+  
 	<dependencies>
 		<dependency>
 	    	<groupId>org.apache.logging.log4j</groupId>
@@ -30,5 +37,40 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+	        <groupId>org.apache.cxf</groupId>
+	        <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+	        <version>${cxf.version}</version>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.apache.cxf</groupId>
+	        <artifactId>cxf-rt-rs-client</artifactId>
+	        <version>${cxf.version}</version>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-core-asl</artifactId>
+	        <version>${jackson.version}</version>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-mapper-asl</artifactId>
+	        <version>${jackson.version}</version>
+	      </dependency>
+	      <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-jaxrs</artifactId>
+	        <version>${jackson.version}</version>
+	      </dependency>
+	      <dependency>
+	        <groupId>com.vol</groupId>
+	        <artifactId>vol-common</artifactId>
+	        <version>${volproject.version}</version>
+	      </dependency>
+	      <dependency>
+	        <groupId>com.vol</groupId>
+	        <artifactId>vol-rest</artifactId>
+	        <version>${volproject.version}</version>
+	      </dependency>
 	</dependencies>
 </project>
